change BS_SCHED to TT_SCHED

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -105,7 +105,7 @@ config THREAD_INFO_IN_TASK
 	  One subtle change that will be needed is to use try_get_task_stack()
 	  and put_task_stack() in save_thread_stack_tsk() and get_wchan().
 
-config BS_SCHED
+config TT_SCHED
 	bool "TT Scheduler"
 	default y
 	select TICK_CPU_ACCOUNTING
@@ -796,7 +796,7 @@ menu "Scheduler features"
 config UCLAMP_TASK
 	bool "Enable utilization clamping for RT/FAIR tasks"
 	depends on CPU_FREQ_GOV_SCHEDUTIL
-	depends on !BS_SCHED
+	depends on !TT_SCHED
 	help
 	  This feature enables the scheduler to track the clamped utilization
 	  of each CPU based on RUNNABLE tasks scheduled on that CPU.
@@ -962,7 +962,7 @@ config CGROUP_WRITEBACK
 
 menuconfig CGROUP_SCHED
 	bool "CPU controller"
-	depends on !BS_SCHED
+	depends on !TT_SCHED
 	default n
 	help
 	  This feature lets CPU scheduler recognize task groups and control CPU
@@ -1241,7 +1241,7 @@ config CHECKPOINT_RESTORE
 config SCHED_AUTOGROUP
 	bool "Automatic process group scheduling"
 	default n
-	depends on !BS_SCHED
+	depends on !TT_SCHED
 	select CGROUPS
 	select CGROUP_SCHED
 	select FAIR_GROUP_SCHED
